# quantlab

./: .gitignore  DASHBOARD.md  README.md  app.py  pyproject.toml
benchmarks/: bench_duckdb_query.py  bench_feature_compute.py  bench_vectorbt_run.py
configs/examples/: cn_momentum.json  crypto_momentum.json  us_momentum.json
configs/templates/: pipeline_run.schema.json  strategy_spec.schema.json
configs/workflows/: strategy_research_workflow.json
docs/: STRATEGY_IDEA_GENERATION.md
examples/: strategy_research_workflow_example.md
openclaw/policies/: command_allowlist.json
openclaw/skills/quantlab_runner/: README.md  config.yaml
src/quantlab/: __main__.py
src/quantlab/backtest/: backtrader_engine.py  costs.py  metrics.py  portfolio.py  vectorbt_engine.py
src/quantlab/common/: cache.py  hashing.py  io.py  logging.py  perf.py  timeutils.py
src/quantlab/data/: pipeline.py
src/quantlab/execution/: base.py  cn_equity.py  crypto_perp.py  crypto_spot.py  us_equity.py
src/quantlab/features/: feature_store.py  indicators.py  signals.py  universe.py
src/quantlab/optimize/: coarse_to_fine.py  optuna_objective.py  runner.py  search_space.py
src/quantlab/pipeline/: run.py  stages.py
src/quantlab/report/: build_report.py  plots.py  summarize.py
src/quantlab/robustness/: bootstrap.py  leakage_checks.py  regime_split.py  sensitivity.py  walk_forward.py
tests/: __init__.py  test_cache_key_stability.py  test_execution_constraints.py  test_metrics.py  test_schema_validation.py  test_utc_and_shift.py
workflows/: README.md  strategy_research_lifecycle.json
(+15 files in other folders)
