[project]
name = "quantlab"
version = "0.1.0"
description = "High-performance multi-market quantitative trading platform"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "vectorbt>=0.26.0",
    "backtrader>=1.9.78",
    "numba>=0.59.0",
    "optuna>=3.4.0",
    "joblib>=1.3.0",
    "diskcache>=5.6.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.0",
    "akshare>=1.11.0",
    "ccxt>=4.1.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "jsonschema>=4.19.0",
    "tqdm>=4.66.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "altair>=5.0.0",
]

[project.optional-dependencies]
ray = ["ray>=2.8.0"]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
quantlab-research = "quantlab.workflows.cli:main"
quantlab-dashboard = "streamlit run app.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
